k8s/backend-blockchain-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: gcr.io/solargauge/backend:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: google-credentials-volume
          mountPath: "/app/solargauge-66f76767c6a9.json"
          subPath: solargauge-66f76767c6a9.json
        - name: init-db
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: google-credentials-volume
          secret:
            secretName: google-credentials
        - name: init-db
          configMap:
            name: backend-db-init-scripts
