k8s/db-blockchain-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: init-db
          mountPath: /docker-entrypoint-initdb.d  # Ruta donde se ejecutarán los scripts
      volumes:
      - name: init-db
        configMap:
          name: backend-db-init-scripts
