k8s/market-bill-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-bill
spec:
  replicas: 1
  selector:
    matchLabels:
      app: market-bill
  template:
    metadata:
      labels:
        app: market-bill
    spec:
      containers:
      - name: market-bill
        image: gcr.io/solargauge/market-bill:latest 
        ports:
        - containerPort: 4000
