k8s/db-market-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-market-service
spec:
  selector:
    app: db-market
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
