k8s/market-bill-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: market-bill-service
spec:
  selector:
    app: market-bill
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
  type: LoadBalancer
