k8s/miner-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miner
spec:
  type: LoadBalancer
  ports:
  - port: 8545
    targetPort: 8545
  selector:
    app: miner
