k8s/nginx-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-service
spec:
  type: LoadBalancer
  selector:
    app: nginx-proxy
  ports:
  - port: 443
    targetPort: 443
